--- a/content/identity.html
+++ b/content/identity.html
@@ -11,6 +11,10 @@
 
 		<link rel="stylesheet" href="../css/reveal.css">
 		<link rel="stylesheet" href="../css/theme/default.css" id="theme">
+
+		<!-- For syntax highlighting -->
+		<link rel="stylesheet" href="../lib/css/zenburn.css">
+
 	</head>
 
 	<body>
